[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["Ace <ace.jl.han@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1.8"
graphene-django = "^2.8.0"
graphql-core = ">=2.1rc1"
django = "==3.0"
django-filter = ">=2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
